--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,62 @@
 @import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@700&display=swap");
 
+:root {
+  --main-bg: hsl(222, 26%, 31%);
+  --keypad-bg: hsl(223, 31%, 20%);
+  --display-bg: hsl(224, 36%, 15%);
+  --key-bg: hsl(225, 21%, 49%);
+  --key-shadow: hsl(224, 28%, 35%);
+  --key-bg-two: hsl(6, 63%, 50%);
+  --key-shadow-two: hsl(6, 70%, 34%);
+  --key-bg-light: hsl(30, 25%, 89%);
+  --key-bg-light-shadow: hsl(28, 16%, 65%);
+  --text-dark: hsl(221, 14%, 31%);
+  --text-light: #ffffff;
+  --text-very-dark: hsl(198, 20%, 13%);
+}
+
+body[data-theme="theme-one"] {
+  --main-bg: hsl(222, 26%, 31%);
+  --keypad-bg: hsl(223, 31%, 20%);
+  --display-bg: hsl(224, 36%, 15%);
+  --key-bg: hsl(225, 21%, 49%);
+  --key-shadow: hsl(224, 28%, 35%);
+  --key-bg-two: hsl(6, 63%, 50%);
+  --key-shadow-two: hsl(6, 70%, 34%);
+  --key-bg-light: hsl(30, 25%, 89%);
+  --key-bg-light-shadow: hsl(28, 16%, 65%);
+  --text-dark: hsl(221, 14%, 31%);
+  --text-light: #ffffff;
+}
+
+body[data-theme="theme-two"] {
+  --main-bg: hsl(0, 0%, 90%);
+  --keypad-bg: hsl(0, 5%, 81%);
+  --display-bg: hsl(0, 0%, 93%);
+  --key-bg: hsl(185, 42%, 37%);
+  --key-shadow: hsl(185, 58%, 25%);
+  --key-bg-two: hsl(25, 98%, 40%);
+  --key-shadow-two: hsl(25, 99%, 27%);
+  --key-bg-light: hsl(45, 7%, 89%);
+  --key-bg-light-shadow: hsl(35, 11%, 61%);
+  --text-dark: hsl(60, 10%, 19%);
+  --text-light: #ffffff;
+}
+
+body[data-theme="theme-three"] {
+  --main-bg: hsl(268, 75%, 9%);
+  --keypad-bg: hsl(268, 71%, 12%);
+  --display-bg: hsl(268, 71%, 12%);
+  --key-bg: hsl(281, 89%, 26%);
+  --key-shadow: hsl(285, 91%, 52%);
+  --key-bg-two: hsl(176, 100%, 44%);
+  --key-shadow-two: hsl(177, 92%, 70%);
+  --key-bg-light: hsl(268, 47%, 21%);
+  --key-bg-light-shadow: hsl(290, 70%, 36%);
+  --text-dark: hsl(52, 100%, 62%);
+  --text-light: #ffe53d;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -16,8 +73,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: hsl(222, 26%, 31%);
-  color: #ffffff;
+  background-color: var(--main-bg);
+  color: var(--text-light);
 }
 
 .header,
@@ -42,7 +99,7 @@ input {
   height: 16px;
   width: 16px;
   appearance: none;
-  background-color: #d03f2f;
+  background-color: var(--key-bg-two);
   border-radius: 50%;
   opacity: 0;
 }
@@ -54,7 +111,7 @@ input {
   border-radius: 50px;
   width: 71px;
   height: 26px;
-  background-color: #242d44;
+  background-color: var(--keypad-bg);
 }
 
 .tri-state-toggle label {
@@ -70,13 +127,12 @@ input {
 }
 
 .display {
-  background-color: #181f33;
+  background-color: var(--display-bg);
   width: 327px;
   height: 88px;
   border-radius: 10px;
   margin-top: 24px;
   margin-bottom: 24px;
-  color: #ffffff;
   font-size: 40px;
   line-height: 36.8px;
   letter-spacing: -0.67px;
@@ -87,16 +143,55 @@ input {
 .buttons {
   width: 327px;
   height: 420px;
-  background-color: #242d44;
+  background-color: var(--keypad-bg);
   border-radius: 10px;
   padding: 24px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+  gap: 13px;
 }
 
 .button {
+  font-family: "League Spartan", sans-serif;
   width: 60px;
   height: 64px;
-  background-color: #eae3dc;
-  color: #434a59;
+  background-color: var(--key-bg-light);
+  color: var(--text-dark);
   border-radius: 5px;
   font-size: 32px;
+  line-height: 29px;
+  font-weight: 700;
+  border: none;
+  box-shadow: inset 0px -4px 0px var(--key-bg-light-shadow);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.del-btn {
+  background-color: var(--key-bg);
+  font-size: 20px;
+  color: var(--text-light);
+  box-shadow: inset 0px -4px 0px var(--key-shadow);
+}
+
+.reset-btn {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  width: 133px;
+  font-size: 20px;
+  background-color: var(--key-bg);
+  color: var(--text-light);
+  box-shadow: inset 0px -4px 0px var(--key-shadow);
+}
+
+.equals-btn {
+  grid-column-start: 3;
+  grid-column-end: 5;
+  width: 133px;
+  font-size: 20px;
+  background-color: var(--key-bg-two);
+  color: var(--text-light);
+  box-shadow: inset 0px -4px 0px var(--key-shadow-two);
 }
