--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,8 @@
   --text-dark: hsl(221, 14%, 31%);
   --text-light: #ffffff;
   --text-very-dark: hsl(198, 20%, 13%);
+  --text-color: #ffffff;
+  --equals-color: #ffffff;
 }
 
 body[data-theme="theme-one"] {
@@ -27,6 +29,8 @@ body[data-theme="theme-one"] {
   --key-bg-light-shadow: hsl(28, 16%, 65%);
   --text-dark: hsl(221, 14%, 31%);
   --text-light: #ffffff;
+  --text-color: #ffffff;
+  --equals-color: #ffffff;
 }
 
 body[data-theme="theme-two"] {
@@ -41,6 +45,8 @@ body[data-theme="theme-two"] {
   --key-bg-light-shadow: hsl(35, 11%, 61%);
   --text-dark: hsl(60, 10%, 19%);
   --text-light: #ffffff;
+  --text-color: hsl(198, 20%, 13%);
+  --equals-color: #ffffff;
 }
 
 body[data-theme="theme-three"] {
@@ -54,7 +60,9 @@ body[data-theme="theme-three"] {
   --key-bg-light: hsl(268, 47%, 21%);
   --key-bg-light-shadow: hsl(290, 70%, 36%);
   --text-dark: hsl(52, 100%, 62%);
-  --text-light: #ffe53d;
+  --text-light: #ffffff;
+  --text-color: #ffe53d;
+  --equals-color: hsl(198, 20%, 13%);
 }
 
 * {
@@ -74,7 +82,7 @@ body[data-theme="theme-three"] {
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: var(--main-bg);
-  color: var(--text-light);
+  color: var(--text-dark);
 }
 
 .header,
@@ -82,6 +90,7 @@ body[data-theme="theme-three"] {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  color: var(--text-color);
 }
 
 .theme-label {
@@ -138,6 +147,7 @@ input {
   letter-spacing: -0.67px;
   padding: 29px;
   text-align: right;
+  color: var(--text-color);
 }
 
 .buttons {
@@ -192,6 +202,6 @@ input {
   width: 133px;
   font-size: 20px;
   background-color: var(--key-bg-two);
-  color: var(--text-light);
+  color: var(--equals-color);
   box-shadow: inset 0px -4px 0px var(--key-shadow-two);
 }
