Add css for large devices

--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@
   --equals-color: #ffffff;
   --hover-primary: #a2b2e1;
   --hover-secondary: #f96b5b;
+  --btn-hover: #fffffe;
 }
 
 body[data-theme="theme-one"] {
@@ -35,6 +36,7 @@ body[data-theme="theme-one"] {
   --equals-color: #ffffff;
   --hover-primary: #a2b2e1;
   --hover-secondary: #f96b5b;
+  --btn-hover: #fffffe;
 }
 
 body[data-theme="theme-two"] {
@@ -53,6 +55,7 @@ body[data-theme="theme-two"] {
   --equals-color: #ffffff;
   --hover-primary: #62b5bc;
   --hover-secondary: #ff8a38;
+  --btn-hover: #ffffff;
 }
 
 body[data-theme="theme-three"] {
@@ -71,12 +74,17 @@ body[data-theme="theme-three"] {
   --equals-color: hsl(198, 20%, 13%);
   --hover-primary: #8631af;
   --hover-secondary: #93fff8;
+  --btn-hover: #6c34ac;
 }
 
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+
+body {
+  background-color: var(--main-bg);
 }
 
 .App {
@@ -113,50 +121,19 @@ body[data-theme="theme-three"] {
   height: 42px;
 }
 
-/* input {
-  height: 16px;
-  width: 16px;
-  appearance: none;
-  background-color: var(--key-bg-two);
-  border-radius: 50%;
-  opacity: 0;
-}
-
-.tri-state-toggle {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  border-radius: 50px;
-  width: 71px;
-  height: 26px;
-  background-color: var(--keypad-bg);
-}
-
-.tri-state-toggle label {
-  position: relative;
-  top: -20px;
-  left: 8px;
-  font-size: 12px;
-  line-height: 11.04px;
-}
-
-#one {
-  opacity: 1;
-} */
-
 .slidecontainer {
   width: 71px;
 }
 
 .slider {
-  -webkit-appearance: none; /* Override default CSS styles */
+  -webkit-appearance: none;
   appearance: none;
-  width: 100%; /* Full-width */
-  height: 25px; /* Specified height */
+  width: 100%;
+  height: 25px;
   background-color: var(--keypad-bg);
-  outline: none; /* Remove outline */
-  opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
-  -webkit-transition: 0.2s; /* 0.2 seconds transition on hover */
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: 0.2s;
   transition: opacity 0.2s;
   border-radius: 50px;
   padding: 5px;
@@ -164,21 +141,21 @@ body[data-theme="theme-three"] {
 }
 
 .slider::-webkit-slider-thumb {
-  -webkit-appearance: none; /* Override default look */
+  -webkit-appearance: none;
   appearance: none;
-  width: 17px; /* Set a specific slider handle width */
-  height: 17px; /* Slider handle height */
+  width: 17px;
+  height: 17px;
   border-radius: 50px;
-  background: var(--key-bg-two); /* Green background */
-  cursor: pointer; /* Cursor on hover */
+  background: var(--key-bg-two);
+  cursor: pointer;
   border: none;
 }
 
 .slider::-moz-range-thumb {
-  width: 17px; /* Set a specific slider handle width */
-  height: 17px; /* Slider handle height */
-  background: var(--key-bg-two); /* Green background */
-  cursor: pointer; /* Cursor on hover */
+  width: 17px;
+  height: 17px;
+  background: var(--key-bg-two);
+  cursor: pointer;
   border-radius: 50px;
   border: none;
 }
@@ -201,7 +178,9 @@ body[data-theme="theme-three"] {
   line-height: 36.8px;
   letter-spacing: -0.67px;
   padding: 29px;
-  text-align: right;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
   color: var(--text-color);
 }
 
@@ -233,6 +212,10 @@ body[data-theme="theme-three"] {
   align-items: center;
   justify-content: center;
   cursor: pointer;
+}
+
+.button:hover {
+  background-color: var(--btn-hover);
 }
 
 .del-btn {
@@ -277,4 +260,35 @@ body[data-theme="theme-three"] {
 
 .slider::-moz-range-thumb:hover {
   background-color: var(--hover-secondary);
+}
+
+@media (min-width: 375px) {
+  .App {
+    width: 564px;
+    height: 706px;
+  }
+
+  .display {
+    width: 100%;
+    height: 128px;
+    font-size: 56px;
+  }
+
+  .buttons {
+    width: 100%;
+    height: 480px;
+  }
+
+  .button {
+    width: 100%;
+    border-radius: 10px;
+    font-size: 40px;
+  }
+
+  .equals-btn,
+  .reset-btn,
+  .del-btn {
+    width: 100%;
+    font-size: 28px;
+  }
 }
