--- a/src/App.css
+++ b/src/App.css
@@ -91,15 +91,17 @@ body {
   font-family: "League Spartan", sans-serif;
   font-weight: 700;
   padding: 24px;
+  display: flex;
+  height: 100vh;
   width: 100%;
-  min-width: 375px;
-  height: 667px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  justify-content: center;
+  align-items: center;
   background-color: var(--main-bg);
   color: var(--text-dark);
+}
+
+.wrapper {
+  width: 375px;
 }
 
 .header,
@@ -266,9 +268,11 @@ body {
 
 @media (min-width: 576px) {
   .App {
-    max-width: 564px;
+    height: 100vh;
+  }
 
-    height: 706px;
+  .wrapper {
+    width: 540px;
   }
 
   .display {
